@@ -3,13 +3,17 @@
 * Bring all code into conformance with GNU project coding standards.
   - Use command-line arguments, not the name of the program in argv[0]
     to determine lid's behavior
-  - Use getopt_long () to parse command-line arguments.
+  - Revise the command-line argument syntax, in particular the mkid
+    scanner-arg syntax.
+  - Use getopt_long () in all programs to parse command-line arguments
+  - Handle GNU standard arguments: In particular, --version & --help
 
 * Portability
-  - Fix filenames.c to handle non-UNIX file names properly.
-  - Fix sizeof (int) == sizeof (long) assumptions.
   - The configure script tests for lots of things, but the code doesn't
     use all of the results that it should.
+  - Fix filenames.c to handle non-UNIX file names properly
+    (notably DOS & OS/2).
+  - Fix assumption that (sizeof (int) == sizeof (long))
 
 * lid
   - change the name of the program to something a bit more
