@@ -5,7 +5,7 @@ AC_CONFIG_HEADER(config.h)
 PRODUCT=mkid
 MAJOR_VERSION=3
 MINOR_VERSION=0
-PATCH_LEVEL=3
+PATCH_LEVEL=4
 OLD_PATCH_LEVEL=`expr $PATCH_LEVEL - 1`
 VERSION=$MAJOR_VERSION.$MINOR_VERSION
 FULL_VERSION=$VERSION.$PATCH_LEVEL
